Add demo of visualization working on IDE

--- a/docs/source/results/tables/2021.rst
+++ b/docs/source/results/tables/2021.rst
@@ -1,9 +1,6 @@
-==========================================================================
- Tables of Results: Agriculture Vision 2021
-==========================================================================
 
 ==========================================================================
- Tables of Results: Agriculture Vision 2020
+ Agriculture Vision 2021
 ==========================================================================
 
 Results Summary
